# AI_Week_RAG

./: .gitignore  README.md  group_exercise.md  main.py  pyproject.toml  query_strategies.ipynb  rag.ipynb  rag_001.ipynb  rag_002.ipynb  supplementary.ipynb
backup/: arxiv_abstracts_embeddings.npy  arxiv_text_embeddings.npy  load_embeddings.ipynb  lyrics_embeddings.npy  save_embeddings.ipynb  wiki_500_embeddings.npy
data/: readme.md  songs.csv
group_exercise/: README.md  group_exercise.md  load_arxiv.ipynb  load_wikipedia.ipynb
system_prompts/: rag_system_prompt.txt
