[project]
name = "ai-week-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu==1.10.0",
    "numpy>=2.2.6",
    "ollama>=0.5.1",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "scikit-learn==1.5.2",
    "sentence-transformers>=4.1.0",
    "umap-learn>=0.5.7",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
]
