[project]
name = "ai-week-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "faiss-cpu==1.10.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "scikit-learn==1.5.2",
    "sentence-transformers>=4.1.0",
    "transformers>=4.52.4",
]

[project.optional-dependencies]
local = [
    "ollama>=0.5.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "kaleido>=1.0.0",
    "nbformat>=5.10.4",
    "plotly>=6.1.2",
    "umap-learn>=0.5.7",
]
